--- a/index.html
+++ b/index.html
@@ -14,11 +14,22 @@
         <h1>Welcome</h1>
         <nav class="menu">
             <div class="login">
-                <p>Login</p></div>
-            <div class="cadastro"><p>Cadastre-se</p></div>
+                <p>Login</p>
+            </div>
+            <div class="cadastro">
+                <p>Cadastre-se</p>
+            </div>
         </nav>
     </header>
-
+    <main>
+        <p>A vida é muito curta para não pegar uma carona!</p>
+        <img src="imagens/logo.png" alt="imagem">
+    </main>
+    <footer>
+        <div class="rodape">
+            <p>Suporte/Contato</p>
+        </div>
+    </footer>
 </body>
 
 </html>
