--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quer Carona??</title>
+    <title>Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header class="cabecalho">
-        <h1>Welcome</h1>
-        <nav class="menu">
-            <div class="login">
-                <p>Login</p>
-            </div>
-            <div class="cadastro">
-                <p>Cadastre-se</p>
-            </div>
-        </nav>
+    <svg class="imagem" width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path
+            d="M3.84375 20.5C3.84375 29.6986 11.3014 37.1562 20.5 37.1562C29.6986 37.1562 37.1562 29.6986 37.1562 20.5C37.1562 11.3014 29.6986 3.84375 20.5 3.84375C11.3014 3.84375 3.84375 11.3014 3.84375 20.5ZM21.7812 14.0865L16.6899 19.2188H28.668V21.7812H16.6899L21.7812 26.9135L19.9635 28.7184L11.8083 20.5L19.9635 12.2816L21.7812 14.0865Z"
+            fill="#545454" />
+    </svg>
+    <header>
+        <h1>Fazer Login</h1>
     </header>
-    <main>
-        <p>A vida é muito curta para não pegar uma carona!</p>
-        <img src="imagens/logo.png" alt="imagem">
-    </main>
-    <footer>
-        <div class="rodape">
-            <p>Suporte/Contato</p>
-        </div>
-    </footer>
+    <div class="container-email">
+        <label for="email">Email</label>
+    </div>
+    <input class="email" type="email" name="E-mail" id="E-mail" placeholder="Example@email.com">
+    <div class="container-senha">
+        <label for="senha">Senha</label>
+    </div>
+    <input class="senha" type="text" placeholder="Digite sua senha">
+    <h2>Esqueceu a senha?</h2>
+    <div id="botao">
+        <input type="submit" value="Entrar" name="botao" class="BotaoEntrar">
+    </div>
 </body>
 
 </html>
