--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <div id="botao">
         <input type="submit" value="Entrar" name="botao" class="BotaoEntrar">
     </div>
+    <div id="linha1" class="linha">
+
+    <div  id="linha2" class="linha"></div>
+    </div>
 </body>
 
 </html>
