--- a/opcao.html
+++ b/opcao.html
@@ -13,7 +13,7 @@
         
         
     <header class = titulo>
-         <h1> Você quer Fazer? </h1>
+         <h1>O que Você quer Fazer? </h1>
     </header>
     <main>
         <div class ="dar"> Dar Carona</div>
