--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <svg class="imagem" width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path
-            d="M3.84375 20.5C3.84375 29.6986 11.3014 37.1562 20.5 37.1562C29.6986 37.1562 37.1562 29.6986 37.1562 20.5C37.1562 11.3014 29.6986 3.84375 20.5 3.84375C11.3014 3.84375 3.84375 11.3014 3.84375 20.5ZM21.7812 14.0865L16.6899 19.2188H28.668V21.7812H16.6899L21.7812 26.9135L19.9635 28.7184L11.8083 20.5L19.9635 12.2816L21.7812 14.0865Z"
-            fill="#545454" />
-    </svg>
+    <a href="home.html">
+        <svg class="imagem" width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M3.84375 20.5C3.84375 29.6986 11.3014 37.1562 20.5 37.1562C29.6986 37.1562 37.1562 29.6986 37.1562 20.5C37.1562 11.3014 29.6986 3.84375 20.5 3.84375C11.3014 3.84375 3.84375 11.3014 3.84375 20.5ZM21.7812 14.0865L16.6899 19.2188H28.668V21.7812H16.6899L21.7812 26.9135L19.9635 28.7184L11.8083 20.5L19.9635 12.2816L21.7812 14.0865Z"
+                fill="#545454" />
+        </svg>
+    </a>
     <header>
         <h1>Fazer Login</h1>
     </header>
@@ -26,7 +28,7 @@
         <label for="senha">Senha</label>
     </div>
     <input class="senha" type="text" placeholder="Digite sua senha">
-    <h2>Esqueceu a senha?</h2>
+    <h2 class="esqsenha"><a href="recuperar.html">Esqueceu a senha?</a></h2>
     <div id="botao">
         <input type="submit" value="Entrar" name="botao" class="BotaoEntrar">
     </div>
