--- a/cadastro.html
+++ b/cadastro.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a href="index.html"><img class="seta" src="imagens/seta.png" alt=""></a>
+    <a href="index.html"><img class="seta" src="imagens/seta.png" alt="seta"></a>
     <header>
         <h1 class="titulo">Crie sua conta gratuita</h1>
     </header>
