pequena alteracao em opcao

--- a/opcao.html
+++ b/opcao.html
@@ -16,7 +16,7 @@
          <h1>O que Você quer Fazer? </h1>
     </header>
     <main>
-        <div class ="dar"> Dar Carona</div>
+        <div class ="carona"> Dar Carona</div>
         <div class = "pegar"> Pegar Carona</div>
     </main>
     
