criacao de hover nos demais

--- a/cadastro.html
+++ b/cadastro.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cadastro.css">
 </head>
 
 <body>
@@ -28,10 +29,10 @@
         <div class="nao"></div>
     </div>
     <div id="apple">
-        <input type="submit" value="Continuar com a Apple" name="apple" class="EntrarApple">
+        <input type="submit" value="Continuar com a Apple" name="apple" class="EntrarApple selecion">
     </div>
     <div id="google">
-        <input type="submit" value="Continuar com o Google" name="google" class="EntrarGoogle">
+        <input type="submit" value="Continuar com o Google" name="google" class="EntrarGoogle selecion">
     </div>
     <footer>
         <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do que
