--- a/recuperar.html
+++ b/recuperar.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar Senha</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="recuperar.css">
 </head>
 
 <body>
@@ -25,15 +26,16 @@
         <div class="sim"></div>
         <div class="ou">OU</div>
         <div class="nao"></div>
-    </div>
+    </div> 
+
     <div id="apple">
-        <input type="submit" value="Continuar com a apple" name="apple" class="EntrarApple">
+        <input type="submit" value="Continuar com a apple" name="apple" class="EntrarApple selecion">
     </div>
     <div id="google">
-        <input type="submit" value="Continuar com o google" name="google" class="EntrarGoogle">
+        <input type="submit" value="Continuar com o google" name="google" class="EntrarGoogle selecion">
     </div>
     <div id="conta">
-        <input type="submit" value="Criar uma conta nova" name="conta" class="EntrarNewConta">
+        <input type="submit" value="Criar uma conta nova" name="conta" class="EntrarNewConta selecion">
     </div>
     <footer>
         <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do que
