--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <div class="nao"></div>
     </div>
     <div id="apple">
-        <input type="submit" value="Continuar com a Apple" name="apple" class="EntrarApple">
+        <input type="submit" value="Continuar com a Apple" name="apple" class="EntrarApple selecion">
     </div>
     <div id="google">
-        <input type="submit" value="Continuar com o Google" name="google" class="EntrarGoogle">
+        <input type="submit" value="Continuar com o Google" name="google" class="EntrarGoogle selecion">
     </div>
     <div id="conta">
-        <input type="submit" value="Criar uma nova conta" name="conta" class="EntrarNewConta">
+        <input type="submit" value="Criar uma nova conta" name="conta" class="EntrarNewConta selecion">
     </div>
     <footer>
         <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do que
