reutilizando codígo do css

--- a/cadastro.html
+++ b/cadastro.html
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-    <a href="index.html"><img class="seta" src="imagens/seta.png" alt=""></a>
+    <a href="index.html"><img class="seta" src="imagens/seta.png" alt="imagem da seta"></a>
     <header>
         <h1 class="titulo">Crie sua conta gratuita</h1>
     </header>
     <div class="container-email">
         <label for="email">Email</label>
     </div>
-    <input class="email" type="email" name="E-mail" id="E-email" placeholder="Example@email.com">
+    <input class="email" type="email" name="E-mail" id="cor" placeholder="Example@email.com">
     <div id="botao">
-        <input type="submit" value="Continuar com Email" name="botao" class="ContinuarEmail">
+        <input type="submit" value="Continuar com Email" name="botao" class="BotaoEntrar">
     </div>
     <p class="possuilogin">Já possui uma conta? <a href="index.html">Login</a></p>
     <div id="linha">
@@ -29,10 +29,10 @@
         <div class="nao"></div>
     </div>
     <div id="apple">
-        <input type="submit" value="Continuar com a Apple" name="apple" class="EntrarApple selecion">
+        <input type="submit" value="Continuar com a Apple" name="apple" class="configbutton selecion">
     </div>
     <div id="google">
-        <input type="submit" value="Continuar com o Google" name="google" class="EntrarGoogle selecion">
+        <input id="txtgoogle" type="submit" value="Continuar com o Google" name="google" class="configbutton selecion">
     </div>
     <footer>
         <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do que
