--- a/index.html
+++ b/index.html
@@ -14,24 +14,23 @@
 </head>
 
 <body>
-    <a href="home.html">
-        <svg class="imagem" width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-                d="M3.84375 20.5C3.84375 29.6986 11.3014 37.1562 20.5 37.1562C29.6986 37.1562 37.1562 29.6986 37.1562 20.5C37.1562 11.3014 29.6986 3.84375 20.5 3.84375C11.3014 3.84375 3.84375 11.3014 3.84375 20.5ZM21.7812 14.0865L16.6899 19.2188H28.668V21.7812H16.6899L21.7812 26.9135L19.9635 28.7184L11.8083 20.5L19.9635 12.2816L21.7812 14.0865Z"
-                fill="#545454" />
-        </svg>
-    </a>
+
+    <svg class="imagem" width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path
+            d="M3.84375 20.5C3.84375 29.6986 11.3014 37.1562 20.5 37.1562C29.6986 37.1562 37.1562 29.6986 37.1562 20.5C37.1562 11.3014 29.6986 3.84375 20.5 3.84375C11.3014 3.84375 3.84375 11.3014 3.84375 20.5ZM21.7812 14.0865L16.6899 19.2188H28.668V21.7812H16.6899L21.7812 26.9135L19.9635 28.7184L11.8083 20.5L19.9635 12.2816L21.7812 14.0865Z"
+            fill="#545454" />
+    </svg>
     <header>
         <h1>Fazer Login</h1>
     </header>
     <div class="container-email">
         <label for="email">Email</label>
     </div>
-    <input class="email" type="email" name="E-mail" id="E-mail" placeholder="Example@email.com">
+    <input id="cor" class="email" type="email" name="E-mail" placeholder="Example@email.com">
     <div class="container-senha">
         <label for="senha">Senha</label>
     </div>
-    <input class="senha" type="text" placeholder="Digite sua senha">
+    <input id="cor" class="senha" type="text" placeholder="Digite sua senha">
     <h2 class="esqsenha"><a href="recuperar.html">Esqueceu a senha?</a></h2>
     <div id="botao">
         <input type="submit" value="Entrar" name="botao" class="BotaoEntrar">
@@ -42,13 +41,14 @@
         <div class="nao"></div>
     </div>
     <div id="apple">
-        <input type="submit" value="Continuar com a Apple" name="apple" class="EntrarApple selecion">
+        <input type="submit" value="Continuar com a Apple" name="apple" class="configbutton selecion">
     </div>
     <div id="google">
-        <input type="submit" value="Continuar com o Google" name="google" class="EntrarGoogle selecion">
+        <input id="txtgoogle" type="submit" value="Continuar com o Google" name="google" class="configbutton selecion">
     </div>
     <div id="conta">
-        <input type="submit" value="Criar uma nova conta" name="conta" class="EntrarNewConta selecion">
+        <a href="cadastro.html"><input type="submit" value="Criar uma nova conta" name="conta"
+                class="EntrarNewConta selecion"></a>
     </div>
     <footer>
         <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do que
