--- a/recuperar.html
+++ b/recuperar.html
@@ -18,24 +18,25 @@
     <div class="container-email">
         <label for="email">Email</label>
     </div>
-    <input class="email" type="email" name="E-mail" id="E-mail" placeholder="Example@email.com">
+    <input class="email" type="email" name="E-mail" id="cor" placeholder="Example@email.com">
     <div id="botao">
-        <input type="submit" value="Enviar Email" name="botao" class="ContinuarEmail">
+        <input type="submit" value="Enviar Email" name="botao" class="BotaoEntrar">
     </div>
     <div id="linha">
         <div class="sim"></div>
         <div class="ou">OU</div>
         <div class="nao"></div>
-    </div> 
+    </div>
 
     <div id="apple">
-        <input type="submit" value="Continuar com a apple" name="apple" class="EntrarApple selecion">
+        <input type="submit" value="Continuar com a apple" name="apple" class="configbutton selecion">
     </div>
     <div id="google">
-        <input type="submit" value="Continuar com o google" name="google" class="EntrarGoogle selecion">
+        <input id="txtgoogle" type="submit" value="Continuar com o google" name="google" class="configbutton selecion">
     </div>
     <div id="conta">
-        <input type="submit" value="Criar uma conta nova" name="conta" class="EntrarNewConta selecion">
+        <a href="cadastro.html"><input type="submit" value="Criar uma conta nova" name="conta"
+                class="EntrarNewConta selecion"></a>
     </div>
     <footer>
         <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do que
