--- a/cadastro.html
+++ b/cadastro.html
@@ -18,7 +18,7 @@
     <div class="container-email">
         <label for="email">Email</label>
     </div>
-    <input class="email" type="email" name="E-mail" id="cor" placeholder="Example@email.com">
+    <input class="email cor" type="email" name="E-mail" placeholder="Example@email.com">
     <div id="botao">
         <input type="submit" value="Continuar com Email" name="botao" class="BotaoEntrar">
     </div>
