--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel = "apple-touch-icon"  href = "apple-touch-icon.png" >
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -26,11 +27,11 @@
     <div class="container-email">
         <label for="email">Email</label>
     </div>
-    <input id="cor" class="email" type="email" name="E-mail" placeholder="Example@email.com">
+    <input class="email cor" type="email" name="E-mail" placeholder="Example@email.com">
     <div class="container-senha">
         <label for="senha">Senha</label>
     </div>
-    <input id="cor" class="senha" type="text" placeholder="Digite sua senha">
+    <input class="senha cor" type="text" placeholder="Digite sua senha">
     <h2 class="esqsenha"><a href="recuperar.html">Esqueceu a senha?</a></h2>
     <div id="botao">
         <input type="submit" value="Entrar" name="botao" class="BotaoEntrar">
