--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container-senha">
         <label for="senha">Senha</label>
     </div>
-    <input class="senha cor" type="text" placeholder="Digite sua senha">
+    <input class="senha cor" type="password" placeholder="Digite sua senha">
     <h2 class="esqsenha"><a href="recuperar.html">Esqueceu a senha?</a></h2>
     <div id="botao">
         <input type="submit" value="Entrar" name="botao" class="BotaoEntrar">
