telas de dar e pegar carona

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             fill="#545454" />
     </svg>
     <header>
-        <h1>Fazer Login</h1>
+        <h1 class="title">Fazer Login</h1>
     </header>
     <div class="container-email">
         <label for="email">Email</label>
