interligando os links

--- a/cadastro.html
+++ b/cadastro.html
@@ -20,7 +20,7 @@
     </div>
     <input class="email cor" type="email" name="E-mail" placeholder="Example@email.com">
     <div id="botao">
-        <input type="submit" value="Continuar com Email" name="botao" class="BotaoEntrar">
+        <a href="escolha.html"><input type="submit" value="Continuar com Email" name="botao" class="BotaoEntrar"></a>
     </div>
     <p class="possuilogin">Já possui uma conta? <a href="index.html">Login</a></p>
     <div id="linha">
