--- a/darcarona.html
+++ b/darcarona.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="imagens/seta.png" class="seta" alt="seta">
+    <a href="escolha.html"><img src="imagens/seta.png" class="seta" alt="seta"></a>
     <header>
         <h1 class="title">Dar carona</h1>
     </header>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div>
-                    <button class="BotaoEntrar" id="procurarpasseiro">Procurar passageiro</button>
+                    <button type="button" class="BotaoEntrar" id="procurarpasseiro">Procurar passageiro</button>
                 </div>
 
 
