--- a/pegarcarona.html
+++ b/pegarcarona.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="imagens/seta.png" class="seta" alt="seta">
+    <a href="escolha.html"><img src="imagens/seta.png" class="seta" alt="seta"></a>
     <header>
         <h1 class="title">Pegar carona</h1>
     </header>
@@ -50,11 +50,11 @@
                         </label>
                     </div>
                     <div>
-                        <input type="checkbox" name="" id="" class="ok">
+                        <input type="checkbox" class="ok">
                     </div>
                 </div>
                 <div>
-                    <button class="BotaoEntrar" id="procurarpasseiro">Procurar carona</button>
+                    <button type="button" class="BotaoEntrar" id="procurarpasseiro">Procurar carona</button>
                 </div>
             </div>
         </form>
