--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <input class="senha cor" type="password" placeholder="Digite sua senha">
     <h2 class="esqsenha"><a href="recuperar.html">Esqueceu a senha?</a></h2>
     <div id="botao">
-        <input type="submit" value="Entrar" name="botao" class="BotaoEntrar">
+        <a href="escolha.html"><input type="submit" value="Entrar" name="botao" class="BotaoEntrar"></a>
     </div>
     <div id="linha">
         <div class="sim"></div>
