--- a/perfis_passageiro.html
+++ b/perfis_passageiro.html
@@ -28,9 +28,18 @@
             </defs>
             </svg>
     </div>
+    <div class="passageiro">
+        <div>
+            <button type="button" class="Botao" id="procurarpasseiro">Dar Carona</button>
+
+        </div>
+        <div>
+            <button type="button" class="Botao outro_p" id="procurarpasseiro">Procurar outro passageiro</button>
+            
+        </div>
+    </div>
     <footer>
-        <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do que
-            carona, você concorda com esse uso de cokkies. <a href="#">Saber mais</a></p>
+        <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do quecarona, você concorda com esse uso de cokkies. <a href="#">Saber mais</a></p>
     </footer>
 </body>
 </html>
