alteracao perfil passageiro

--- a/perfis_passageiro.html
+++ b/perfis_passageiro.html
@@ -30,11 +30,11 @@
     </div>
     <div class="passageiro">
         <div>
-            <button type="button" class="Botao" id="procurarpasseiro">Dar Carona</button>
+            <button type="button" class="BotaoEntrar" id="procurarpassageiro">Dar Carona</button>
 
         </div>
         <div>
-            <button type="button" class="Botao outro_p" id="procurarpasseiro">Procurar outro passageiro</button>
+            <button type="button" class="BotaoEntrar outro_p" id="procurarpassageiro2">Procurar outro passageiro</button>
             
         </div>
     </div>
