finalizado aba perfil de voce

--- a/perfil_voce.html
+++ b/perfil_voce.html
@@ -35,12 +35,13 @@
                 </defs>
             </svg>
         </div>
-        <input type="text" name= "name" placeholder="Digite seu nome">
+        <input type="text" name= "name" id="tituloP" placeholder="Digite seu nome">
         <h5>Sobre Você</h5>
-        <input type="text" name= "name" placeholder="Do que você gosta?">
-        <input type="text" name= "name" placeholder="Que tipo fr música você escuta">
+        
+        <input type="text" name= "name" id="sobre_vc" placeholder="Do que você gosta?">
+        <input type="text" name= "name" id="sobre_vc" placeholder="Que tipo de música você escuta">
 
-        <button type="button" class="BotaoEntrar" id="procurarpassageiro">Salvar Dados</button>
+        <button type="button" class="BotaoEntrar espaco" id="procurarpassageiro">Salvar Dados</button>
 
         <footer>
             <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do
