concluindo tela perfis como alternativas de escolhas

--- a/perfil_voce.html
+++ b/perfil_voce.html
@@ -41,6 +41,15 @@
         <input type="text" name= "name" id="sobre_vc" placeholder="Do que você gosta?">
         <input type="text" name= "name" id="sobre_vc" placeholder="Que tipo de música você escuta">
 
+        <h5>Gosta de Conversar?</h5>
+
+        <div class="radio fonte ">
+            <input type="radio" value="0" name="campo-radio" id="campo-radio1" />
+            <label class="raio" for="campo-radio1">Sim</label>
+            <input type="radio" value="0" name="campo-radio" id="campo-radio2" />
+            <label class="raio" for="campo-radio2">Não</label>
+        </div>
+
         <button type="button" class="BotaoEntrar espaco" id="procurarpassageiro">Salvar Dados</button>
 
         <footer>
