--- a/perfis_passageiro.html
+++ b/perfis_passageiro.html
@@ -36,12 +36,21 @@
                 </defs>
             </svg>
         </div>
-        <p class= "caixa"> Alicia dos Santos
-        </p>
+        <p class= "caixaNome"> Alicia dos Santos </p>
         <h5>Sobre o passageiro</h5>
         
-        <input type="text" name= "name" id="sobre_vc" placeholder="Do que você gosta?">
-        <input type="text" name= "name" id="sobre_vc" placeholder="Que tipo de música você escuta">
+        <p class= "caixaInformacao"> Gosto de novela mexicana </p>
+        <p class= "caixaInformacao"> Ouço Rock e musica classica
+        </p>
+        <h5>Gosta de Conversar?</h5>
+
+        <div class="radio fonte ">
+            <input type="radio" value="0" name="campo-radio" id="campo-radio1" />
+            <label class="raio" for="campo-radio1">Sim</label>
+            <input type="radio" value="0" name="campo-radio" id="campo-radio2" />
+            <label class="raio" for="campo-radio2">Não</label>
+        </div>
+
 
         <button type="button" class="BotaoEntrar espaco" id="procurarpassageiro">Dar Carona</button>
         <button type="button" class="BotaoEntrar outro_p" id="procurarpassageiro">Procurar outro passageiro</button>
