perfil motorista e mapas

--- a/darcarona.html
+++ b/darcarona.html
@@ -50,11 +50,11 @@
                         </label>
                     </div>
                     <div>
-                        <input type="checkbox" name="" id="" class="ok">
+                        <input type="checkbox" name="" id="ok" class="ok">
                     </div>
                 </div>
                 <div>
-                    <button type="button" class="BotaoEntrar" id="procurarpasseiro">Procurar passageiro</button>
+                    <a href="mapa.html"><button type="button" class="BotaoEntrar" id="procurarpassageiro">Procurar passageiro</button></a>
                 </div>
 
 
