--- a/pegarcarona.html
+++ b/pegarcarona.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div>
-                    <button type="button" class="BotaoEntrar" id="procurarpasseiro">Procurar carona</button>
+                    <a href="mapa2.html"><button type="button" class="BotaoEntrar" id="procurarpassageiro">Procurar carona</button></a>
                 </div>
             </div>
         </form>
