--- a/perfilmotorista.html
+++ b/perfilmotorista.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil Sobre você</title>
+    <title>Perfil Passageiro</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -35,12 +36,12 @@
                 </defs>
             </svg>
         </div>
-        <input type="text" name= "name" id="tituloP" placeholder="Digite seu nome">
-        <h5>Sobre Você</h5>
+        <p class= "caixaNome">Marcos Vinicius</p>
+        <h3 class="sobrepass">Sobre o motorista</h3>
         
-        <input type="text" name= "name" id="sobre_vc" placeholder="Do que você gosta?">
-        <input type="text" name= "name" id="sobre_vc" placeholder="Que tipo de música você escuta">
-
+        <p class= "caixaNome">Torce para o vasco</p>
+        <p class= "caixaNome">Escuta funk e musica pop
+        </p>
         <h5>Gosta de Conversar?</h5>
 
         <div class="radio fonte ">
@@ -50,7 +51,9 @@
             <label class="raio" for="campo-radio2">Não</label>
         </div>
 
-        <a href="escolha.html"><button type="button" class="BotaoEntrar espaco" id="procurarpassageiro">Salvar Dados</button></a>
+
+        <button type="button" class="BotaoEntrar espaco" id="btn-darCarona">Pegar Carona</button>
+        <a href="mapa2.html"><button type="button" class="BotaoEntrar outro_p" id="btn-procurar">Procurar outro motorista</button></a>
 
         <footer>
             <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do
