--- a/perfis_passageiro.html
+++ b/perfis_passageiro.html
@@ -37,10 +37,10 @@
             </svg>
         </div>
         <p class= "caixaNome"> Alicia dos Santos </p>
-        <h5>Sobre o passageiro</h5>
+        <h3 class="sobrepass">Sobre o passageiro</h3>
         
-        <p class= "caixaInformacao"> Gosto de novela mexicana </p>
-        <p class= "caixaInformacao"> Ouço Rock e musica classica
+        <p class= "caixaNome"> Gosto de novela mexicana </p>
+        <p class= "caixaNome"> Ouço Rock e musica classica
         </p>
         <h5>Gosta de Conversar?</h5>
 
@@ -52,8 +52,8 @@
         </div>
 
 
-        <button type="button" class="BotaoEntrar espaco" id="procurarpassageiro">Dar Carona</button>
-        <button type="button" class="BotaoEntrar outro_p" id="procurarpassageiro">Procurar outro passageiro</button>
+        <button type="button" class="BotaoEntrar espaco" id="btn-darCarona">Dar Carona</button>
+        <a href="mapa.html"><button type="button" class="BotaoEntrar outro_p" id="btn-procurar">Procurar outro passageiro</button></a>
 
         <footer>
             <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do
