--- a/index.html
+++ b/index.html
@@ -1,60 +1,91 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="CSS/reset.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link rel ="apple-touch-icon"  href = "/img/apple-touch-icon.png" >
+        <link rel="manifest" href="./json/manifest.json">
+        <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+        <title>Quer Carona?</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel = "apple-touch-icon"  href = "apple-touch-icon.png" >
-    <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-
-</head>
-
-<body>
-
-    <svg class="imagem" width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path
-            d="M3.84375 20.5C3.84375 29.6986 11.3014 37.1562 20.5 37.1562C29.6986 37.1562 37.1562 29.6986 37.1562 20.5C37.1562 11.3014 29.6986 3.84375 20.5 3.84375C11.3014 3.84375 3.84375 11.3014 3.84375 20.5ZM21.7812 14.0865L16.6899 19.2188H28.668V21.7812H16.6899L21.7812 26.9135L19.9635 28.7184L11.8083 20.5L19.9635 12.2816L21.7812 14.0865Z"
-            fill="#545454" />
-    </svg>
-    <header>
-        <h1 class="title">Fazer Login</h1>
-    </header>
-    <div class="container-email">
-        <label for="email">Email</label>
-    </div>
-    <input class="email cor" type="email" name="E-mail" placeholder="Example@email.com">
-    <div class="container-senha">
-        <label for="senha">Senha</label>
-    </div>
-    <input class="senha cor" type="password" placeholder="Digite sua senha">
-    <h2 class="esqsenha"><a href="recuperar.html">Esqueceu a senha?</a></h2>
-    <div id="botao">
-        <a href="escolha.html"><input type="submit" value="Entrar" name="botao" class="BotaoEntrar"></a>
-    </div>
-    <div id="linha">
-        <div class="sim"></div>
-        <div class="ou">OU</div>
-        <div class="nao"></div>
-    </div>
-    <div id="apple">
-        <input type="submit" value="Continuar com a Apple" name="apple" class="configbutton selecion">
-    </div>
-    <div id="google">
-        <input id="txtgoogle" type="submit" value="Continuar com o Google" name="google" class="configbutton selecion">
-    </div>
-    <div id="conta">
-        <a href="cadastro.html"><input type="submit" value="Criar uma nova conta" name="conta"
-                class="EntrarNewConta selecion"></a>
-    </div>
-    <footer>
-        <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do que
-            carona, você concorda com esse uso de cokkies. <a href="#">Saber mais</a></p>
-    </footer>
-</body>
-
+    </head>
+    <body>
+        <header class="box__header">
+            <div class="boxbox__header">
+                <img src="img/perfil1.png" alt="Imagem de Perfil" class="secao__header-img">
+                <span class="secao__header-texto">
+                    <p class="secao__header-texto2">Carlos Luz</p>
+                    <p class="secao__header-texto3">Bio</p>
+                    </span>
+                <img src="icons/notifications.svg" alt="icone de notificacao" class="secao__header-icone">
+            </div>
+        </header>
+        <main class="box-corpo">
+            <form class="box-corpo2">
+                <fieldset>
+                    <div class="box-corpo3">
+                        
+                        <input type="text" name="origem" id="origem" placeholder="De (endereço completo)" class="endereco__procura">
+                    
+                        <input type="text" name="origem" id="origem" placeholder="Para (endereço completo)" class="endereco__procura">
+                    </div>
+                    <div class="box-corpo4">
+                        <!-- <img src="icons/calendario.svg" alt="icone de calendario"> -->
+                        <input type="date" id="calendario"></p>
+                        <img src="icons/boneco.svg" alt="icone do boneco" class="box__corpo4--img">
+                        <select name="select" id="quantidadeVagas">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                    </div>
+                </fieldset>
+            </form>
+            <form class="botao__procurar">
+                <button class="botao__procurar--interno">
+                    Procurar
+                </button>
+            </form>
+        </main>
+        <footer class= "box__rodape">
+            <ul class="rodape__lista">
+                <li class="rodape__lista--item">
+                    <a href="index.html" class="rodape__lista--link">
+                        <img src="icons/procurar-ativo.svg" alt="icone de home" class="rodape__lista--img">
+                        <p class="rodape__lista-texto rodape__lista-texto-ativo ">Procurar</p>
+                    </a>
+                </li>
+                <li class="rodape__lista--item">
+                    <a href="oferecer.html" class="rodape__lista--link">
+                        <img src="icons/oferecer.svg" alt="icone de perfil" class="rodape__lista--img">
+                        <p class="rodape__lista-texto" >Oferecer</p>
+                    </a>
+                </li>
+                <li class="rodape__lista--item">
+                    <a href="suasViagens.html" class="rodape__lista--link">
+                        <img src="icons/suasviagens.svg" alt="icone de carona" class="rodape__lista--img">
+                        <p class="rodape__lista-texto">Suas Viagens</p>
+                    </a>
+                </li>
+                <li class="rodape__lista--item">
+                    <a href="mensagens.html" class="rodape__lista--link">
+                        <img src="icons/mensagens.svg" alt="icone de chat" class="rodape__lista--img">
+                        <p class="rodape__lista-texto">Mensagens</p>
+                    </a>
+                </li>
+                <li class="rodape__lista--item">
+                    <a href="perfil.html" class="rodape__lista--link">
+                        <img src="icons/abaperfil.svg" alt="icone de configuracao" class="rodape__lista--img">
+                        <p class="rodape__lista-texto">Perfil</p>
+                    </a>
+                </li>
+            </ul>
+        </footer>
+    </body>
 </html>
