--- a/index.html
+++ b/index.html
@@ -1,91 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="CSS/reset.css">
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-        <link rel ="apple-touch-icon"  href = "/img/apple-touch-icon.png" >
-        <link rel="manifest" href="./json/manifest.json">
-        <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
-        <title>Quer Carona?</title>
-
-    </head>
-    <body>
-        <header class="box__header">
-            <div class="boxbox__header">
-                <img src="img/perfil1.png" alt="Imagem de Perfil" class="secao__header-img">
-                <span class="secao__header-texto">
-                    <p class="secao__header-texto2">Carlos Luz</p>
-                    <p class="secao__header-texto3">Bio</p>
-                    </span>
-                <img src="icons/notifications.svg" alt="icone de notificacao" class="secao__header-icone">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./CSS/login/telaInicio.css">
+    <title>Tela de Inicio</title>
+</head>
+<body>
+    <header>
+        <div class="img-logo">
+            <img src="./img/QuerCaronaLogo2.png" alt="logo Quer Carona?" >
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <div class="container-botao">
+                <button onclick="window.location.href = './html/login/criarConta.html'" class="botao-cadastre">Cadastre-se</button>
+                <button onclick="window.location.href = './html/login/login.html'" class="botao-login">Entrar</button>
             </div>
-        </header>
-        <main class="box-corpo">
-            <form class="box-corpo2">
-                <fieldset>
-                    <div class="box-corpo3">
-                        
-                        <input type="text" name="origem" id="origem" placeholder="De (endereço completo)" class="endereco__procura">
-                    
-                        <input type="text" name="origem" id="origem" placeholder="Para (endereço completo)" class="endereco__procura">
-                    </div>
-                    <div class="box-corpo4">
-                        <!-- <img src="icons/calendario.svg" alt="icone de calendario"> -->
-                        <input type="date" id="calendario"></p>
-                        <img src="icons/boneco.svg" alt="icone do boneco" class="box__corpo4--img">
-                        <select name="select" id="quantidadeVagas">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                        </select>
-                    </div>
-                </fieldset>
-            </form>
-            <form class="botao__procurar">
-                <button class="botao__procurar--interno">
-                    Procurar
-                </button>
-            </form>
-        </main>
-        <footer class= "box__rodape">
-            <ul class="rodape__lista">
-                <li class="rodape__lista--item">
-                    <a href="index.html" class="rodape__lista--link">
-                        <img src="icons/procurar-ativo.svg" alt="icone de home" class="rodape__lista--img">
-                        <p class="rodape__lista-texto rodape__lista-texto-ativo ">Procurar</p>
-                    </a>
-                </li>
-                <li class="rodape__lista--item">
-                    <a href="oferecer.html" class="rodape__lista--link">
-                        <img src="icons/oferecer.svg" alt="icone de perfil" class="rodape__lista--img">
-                        <p class="rodape__lista-texto" >Oferecer</p>
-                    </a>
-                </li>
-                <li class="rodape__lista--item">
-                    <a href="suasViagens.html" class="rodape__lista--link">
-                        <img src="icons/suasviagens.svg" alt="icone de carona" class="rodape__lista--img">
-                        <p class="rodape__lista-texto">Suas Viagens</p>
-                    </a>
-                </li>
-                <li class="rodape__lista--item">
-                    <a href="mensagens.html" class="rodape__lista--link">
-                        <img src="icons/mensagens.svg" alt="icone de chat" class="rodape__lista--img">
-                        <p class="rodape__lista-texto">Mensagens</p>
-                    </a>
-                </li>
-                <li class="rodape__lista--item">
-                    <a href="perfil.html" class="rodape__lista--link">
-                        <img src="icons/abaperfil.svg" alt="icone de configuracao" class="rodape__lista--img">
-                        <p class="rodape__lista-texto">Perfil</p>
-                    </a>
-                </li>
-            </ul>
-        </footer>
-    </body>
+            <div id="linha">
+                <div class="left"></div>
+                <div class="or">OU</div>
+                <div class="right"></div>
+            </div>
+            <div id="apple">
+                <input type="submit" value="Continuar com a Apple" name="apple" class="configbutton selecion">
+            </div>
+            <div id="google">
+                <input id="txtgoogle" type="submit" value="Continuar com o Google" name="google" class="configbutton selecion">
+            </div>
+            <div id="conta">
+                <a href="cadastro.html"><input type="submit" value="Criar uma nova conta" name="conta"
+                        class="EntrarNewConta selecion"></a>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do que
+            carona, você concorda com esse uso de cokkies. <a href="#">Saber mais</a></p>
+    </footer>
+</body>
 </html>
