--- a/suasViagens.html
+++ b/suasViagens.html
@@ -37,7 +37,7 @@
     <footer class= "box__rodape">
         <ul class="rodape__lista">
             <li class="rodape__lista--item">
-                <a href="index.html" class="rodape__lista--link">
+                <a href="pegarCarona.html" class="rodape__lista--link">
                     <img src="icons/procurar.svg" alt="icone de procurar" class="rodape__lista--img">
                     <p class="rodape__lista-texto" >Procurar</p>
                 </a>
