criando tela de criar conta email

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./CSS/login/telaInicio.css">
+    <link rel ="apple-touch-icon"  href = "/img/apple-touch-icon.png" >
+    <link rel="manifest" href="./json/manifest.json">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <title>Tela de Inicio</title>
 </head>
 <body>
@@ -39,7 +42,7 @@
     </main>
     <footer>
         <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do que
-            carona, você concorda com esse uso de cokkies. <a href="#">Saber mais</a></p>
+            carona, você concorda com esse uso de cokkies. <a href="#" class="footer-link">Saber mais</a></p>
     </footer>
 </body>
 </html>
