--- a/html/login/criarConta.html
+++ b/html/login/criarConta.html
@@ -6,9 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../../CSS/login/criarConta.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel ="apple-touch-icon"  href = "../../img/apple-touch-icon.png" >
+    <link rel="manifest" href="../../json/manifest.json">
+    <link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
     <title>Criar Conta</title>
 </head>
 <body>
-    
+    <header>
+        <button onclick="window.location.href = '../../index.html'" class="setaES"><img class="seta" src="../../icons/setaES.svg" alt="imagem da seta"></button>
+        <div class="img-logo-criar">
+            <img src="../../img/QuerCaronaLogo2.png" alt="logo Quer Carona?" >
+        </div>
+    </header>
+    <main>
+        <div >
+            <form action="" class="container-criarConta">
+                <h2>
+                    Crie sua conta gratuita
+                </h2>
+                <label for="email">Digite seu e-mail</label>
+                <input type="email" name="email" class="email-criar" id="email" placeholder="Seu e-mail">
+                <button onclick="window.location.href = './html/login/login.html'" class="botao-continuar">Continuar com Email  </button>
+                <span class="login">Já possui uma conta
+                    <button onclick="window.location.href = './html/login/login.html'" class="botao-continuar--login">Login</button> 
+                </span>
+
+            </form>
+        </div>
+    </main>
+    <footer class="footerInformacoes">
+        <p>Ao se cadastrar, você aceita nossos <a href="#" class="footer-link">Termos e Condições</a> e nossa<a href="#" class="footer-link">Política de Privacidade</a>. Você possui direitos sobre seus dados pessoais e pode exercê-los entrando em contato com o ‘Quer Carona?’ através do nosso <a href="#" class="footer-link">formulário de contato</a>. Para saber mais sobre seus direitos e sobre como lidamos com seus dados pessoais, confira nossa <a href="#" class="footer-link">Política de Privacidade</a>.</p>
+            
+    </footer>
 </body>
 </html>
