--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="footerInformacoes">
         <p>O quer carona usa cookies para conteúdo e anúncios personalizados de análise. Ao usar os serviços do que
             carona, você concorda com esse uso de cokkies. <a href="#" class="footer-link">Saber mais</a></p>
     </footer>
