editando redirecionamento do buttao entrar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="container-botao">
                 <button onclick="window.location.href = './html/login/criarConta.html'" class="botao-cadastre">Cadastre-se</button>
-                <button onclick="window.location.href = './html/login/login.html'" class="botao-login">Entrar</button>
+                <button onclick="window.location.href = './pegarCarona.html'" class="botao-login">Entrar</button>
             </div>
             <div id="linha">
                 <div class="left"></div>
