testando novas posiçoes do footer

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 <div class="right"></div>
             </div>
             <div id="apple">
-                <input type="submit" value="Continuar com a Apple" name="apple" class="configbutton selecion">
+                <input type="submit" value="Continuar com a Apple" name="apple" class="configbutton selecion apple">
             </div>
             <div id="google">
-                <input id="txtgoogle" type="submit" value="Continuar com o Google" name="google" class="configbutton selecion">
+                <input id="txtgoogle" type="submit" value="Continuar com o Google" name="google" class="configbutton selecion apple">
             </div>
             <div id="conta">
                 <a href="cadastro.html"><input type="submit" value="Criar uma nova conta" name="conta"
-                        class="EntrarNewConta selecion"></a>
+                        class="EntrarNewConta selecion apple"></a>
             </div>
         </div>
     </main>
