testando novas posiçoes do footer

--- a/perfil_conta.html
+++ b/perfil_conta.html
@@ -83,9 +83,10 @@
             
           </ul>
         </section>
-        <button class="btn__sair--conta">
-            <p class="texto__btn--sair">Sair</p>
-        </button>
+
+        <button onclick="window.location.href = './index.html'" class="btn__sair--conta">Sair</button>
+
+
         <button class="btn__sair--conta">
             <p class= "texto__btn--sai">Encerrar conta</p>
         </button>    
