consertando erros de localizacao de arquivo e redirecionamento

--- a/public/perfil_conta.html
+++ b/public/perfil_conta.html
@@ -87,7 +87,7 @@
           </ul>
         </section>
 
-        <button onclick="window.location.href = './index.html'" class="btn__sair--conta">Sair</button>
+        <button onclick="window.location.href = '../index.html'" class="btn__sair--conta">Sair</button>
 
 
         <button class="btn__sair--conta">
