--- a/public/perfil-opcoes.html
+++ b/public/perfil-opcoes.html
@@ -77,7 +77,7 @@
     <footer class= "box__rodape">
         <ul class="rodape__lista">
             <li class="rodape__lista--item">
-                <a href="./index.html" class="rodape__lista--link">
+                <a href="./pegarCarona.html" class="rodape__lista--link">
                     <img src="./assets/icons/procurar.svg" alt="icone de procurar" class="rodape__lista--img">
                     <p class="rodape__lista-texto" >Procurar</p>
                 </a>
@@ -89,7 +89,7 @@
                 </a>
             </li>
             <li class="rodape__lista--item">
-                <a href=./suasViagens.html" class="rodape__lista--link">
+                <a href="./suasViagens.html" class="rodape__lista--link">
                     <img src="./assets/icons/suasviagens.svg" alt="icone de carona" class="rodape__lista--img">
                     <p class="rodape__lista-texto">Suas Viagens</p>
                 </a>
