--- a/public/cadastroNome.html
+++ b/public/cadastroNome.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/cadastroNome.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/criarConta.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -23,16 +24,19 @@
     </header>
     <main>
         <div>
-            <form action="" class="container-Nome formNome" id="formNome">
+            <form action="./criandosenha.html" class="container-Nome formNome" id="formNome">
                 <h2>
                     Qual é o seu nome?
                 </h2>
                 <div class="cadastrarNome">
-                    <input type="inserirNome" name="inserirNome" class="inserirNome" id="inserirNome" placeholder="Nome">
-                    <input type="inserirNome" name="inserirNome" class="inserirNome" id="inserirNome" placeholder="Sobrenome">
-                    <span class="error-message1">Campo Não pode Fica Vazio</span>
+                    <input type="text" name="firstname" class="inserirNome" id="firstname" placeholder="Nome*" minlength="3" maxlength="45" required >
+                    <span class="nameError" role="alert" id="nameError" aria-hidden="true">Campo Não pode Fica Vazio</span>
                 </div>
-                <button type="submit" onclick="window.location.href = './cadastrandoDataNasc.html'" class="botao-continuar" id="botao-continuar-Nome">Continuar</button>
+                <div class="cadastrarNome">
+                    <input type="text" name="firstname" class="inserirNome" id="firstname" placeholder="Sobrenome*" minlength="3" maxlength="60" required >
+                    <span class="nameError" role="alert" id="nameError" aria-hidden="true">Campo Não pode Fica Vazio</span>
+                </div>
+                <button type="submit" class="botao-continuar" id="submit">Continuar</button>
                 
 
             </form>
